--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@azure/msal-node": "^1.11.0",
     "@types/express": "^4.17.13",
     "D": "^1.0.0",
+    "dotenv": "^16.0.1",
     "express": "^4.18.1"
   }
 }
