--- a/package.json
+++ b/package.json
@@ -12,9 +12,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@azure/msal-node": "^1.11.0",
+    "@azure/msal-node": "^1.12.0",
     "@types/express": "^4.17.13",
     "D": "^1.0.0",
+    "cors": "^2.8.5",
     "dotenv": "^16.0.1",
     "express": "^4.18.1"
   }
